# databridge

./: .gitignore  README.md  TESTING.md  pyproject.toml
.claude/: settings.local.json
benchmark/: agent.py  dab.py
databridge/: __init__.py  cli.py  config.py  engine.py
databridge/audit/: __init__.py  log.py
databridge/connectors/: __init__.py  base.py  duckdb_conn.py  mongodb.py  postgres.py  registry.py  sqlite_conn.py
databridge/learning/: __init__.py  session.py
databridge/mcp/: __init__.py  server.py
databridge/query/: __init__.py  executor.py  join_detector.py  planner.py  transforms.py  translator.py
databridge/safety/: __init__.py  enforcement.py
databridge/schema/: __init__.py  cache.py  scanner.py
databridge/schema/joins/: __init__.py  discovery.py  registry.py  transforms.py
databridge/verification/: __init__.py  plausibility.py
tests/: conftest.py  test_audit.py  test_connectors.py  test_joins.py  test_mcp.py  test_query.py  test_safety.py  test_schema.py  test_verification.py
