[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databridge-mcp"
version = "0.1.0"
description = "The intelligent database layer for AI agents"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp>=1.0.0",
    "asyncpg>=0.29.0",
    "motor>=3.3.0",
    "duckdb>=0.10.0",
    "aiosqlite>=0.20.0",
    "sqlglot>=23.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "nltk>=3.8.0",
    "rapidfuzz>=3.0.0",
    "PyYAML>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pymongo>=4.6.0",
]

[project.optional-dependencies]
benchmark = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "python-dateutil>=2.8.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.0.0",
]

[project.scripts]
databridge = "databridge.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["databridge"]
